2011-06-20  Ping Cheng <pingc@wacom.com>
	* Add "-lc" to Makefile.am (Daniel Grafe)
	* Updated wacdump.php with input from Patrick Horgan and David Foley
	* Updated "Building wacom driver On RHEL 5" page by Sylvain Giasson
	* Label 0.9.0

2011-04-27  Ping Cheng <pingc@wacom.com>
	* Put wacom_ioctl back for OLED (Eduard Hasenleithner)
	* Fixed error path in wacom_probe (Alexander Strakh)
	* Updated wacomcfg.c for touch device (David Foley)
	* Some minor kernel updated
	* Label 0.8.9

2011-03-03  Ping Cheng <pingc@wacom.com>
	* Always retrieve (x,y) from the kernel the first time in prox for non-pad tool
	* Don't read data while driver loading/unloading to avoid a hotplugging race condition
	* Don't turn device off when getting read errors
	* Fixed a missing tool type for Cintiq in 2.6.16/wacom_wac.c
	* Label 0.8.8-11

2010-10-12  Ping Cheng <pingc@wacom.com>
	* Fixed a kernel bug for Cintiq 21UX2 pressure (Aristeu Rozanski <aris@redhat.com>)
	* Fixed a print format error in xidump.c (Aristeu Rozanski)
	* Label 0.8.8-10

2010-10-01  Ping Cheng <pingc@wacom.com>
	* Specify the tools supported by Intuos and CintiqV5 
	  series respectively in the kernel
	* Calibration-only wacomcpl has the options to display warnings or 
	  flashing the crosshairs in red when abnormal (x,y) is detected
	* Enable all tools for X server 1.4 and older and kernel 2.6.24 and older
	* Peter Hutterer's configure message update for newer Xorg
	* Label 0.8.8-9

2010-07-27  Ping Cheng <pingc@wacom.com>
	* Updated kernel driver for 2.6.23 and later
	* Label 0.8.8-8

2010-07-22  Ping Cheng <pingc@wacom.com>
	* Fixed a memory leakage in util/wacomcfg.c (Eldar Firing <eldarf@sf.net>)
	* Replaced usb_buffer_free with usb_free_coherent for 2.6.35 
		- by Diego Calleja <diegocg@gmail.com>
	* Removed a few unused routines in xf86Wacom.c
	* Label 0.8.8-7

2010-07-14  Ping Cheng <pingc@wacom.com>
	* Updated udev wacom rules
	* Updated web pages for new devices
	* Added call EVIOCGKEY back in wcmUSB.c