@@ -1065,6 +1065,18 @@ void xf86WcmEvent(WacomCommonPtr common, unsigned int channel,
 		}
 	}
 
+#ifdef WCM_ENABLE_LINUXINPUT
+	/* Discard the first 2 USB packages due to events delay */
+	if ( (pChannel->nSamples < 2) && (common->wcmDevCls == &gWacomUSBDevice) && 
+		(ds.device_type != PAD_ID) && (ds.device_type != TOUCH_ID))
+	{
+		DBG(11, common->debugLevel, 
+			ErrorF("discarded %dth USB data.\n", pChannel->nSamples));
+		++pChannel->nSamples;
+		return; /* discard */
+	}
+#endif
+
 	/* ignore Bamboo touch data if point is abnormal */
 	if ((ds.device_type == TOUCH_ID) && (common->tablet_id >= 0xd0
 	    && common->tablet_id <= 0xd3) && ds.proximity)
